@@ -14,32 +14,33 @@ import signals.Sources;
 public class Calculations extends MathBase {
     public static final Map<String, String[]> calculations = new HashMap<String, String[]>() {
         {
-            put("absolute", new String[] { "twoInputsOneOutputCi", "" });
-            put("add", new String[] { "twoInputsOneOutputCi", "" });
-            put("assign", new String[] { "assign", "" });
-            put("cabs", new String[] { "oneInputOneOutputCi", "" });
-            put("cadd", new String[] { "oneInputOneValueOneOutputCi", "" });
-            put("cdivide", new String[] { "oneInputOneValueOneOutputCi", "" });
-            put("clear", new String[] { "clear", "" });
-            put("clip", new String[] { "clip", "" });
-            put("cmultiply", new String[] { "oneInputOneValueOneOutputCi", "" });
-            put("conjugate", new String[] { "oneInputOneOutputCi", "" });
-            put("copy", new String[] { "oneInputOneOutputCi", "" });
-            put("cosine", new String[] { "oneInputOneOutputCi", "" });
-            put("divide", new String[] { "twoInputsOneOutputCi", "" });
-            put("epow", new String[] { "oneInputOneOutputCi", "" });
-            put("inv", new String[] { "oneInputOneOutputCi", "" });
-            put("ln", new String[] { "oneInputOneOutputCi", "" });
-            put("log", new String[] { "oneInputOneOutputCi", "" });
-            put("maximum", new String[] { "twoInputsOneOutputCi", "" });
-            put("minimum", new String[] { "twoInputsOneOutputCi", "" });
-            put("multiply", new String[] { "multiply", "" });
-            put("rotate", new String[] { "oneInputOneValueOneOutputCi", "" });
-            put("shift", new String[] { "oneInputOneValueOneOutputCi", "" });
-            put("sine", new String[] { "oneInputOneOutputCi", "" });
-            put("subtract", new String[] { "twoInputsOneOutputCi", "" });
-            put("tenpow", new String[] { "oneInputOneOutputCi", "" });
-            put("zeropad", new String[] { "oneInputOneOutputCi", "" });
+            put("absolute", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("add", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("assign", new String[] { "assign", "<input> <real-value> <imag-value>" });
+            put("cabs", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("cadd", new String[] { "oneInputOneValueOneOutputCi", "<input> <constant> <output>" });
+            put("cdivide", new String[] { "oneInputOneValueOneOutputCi", "<input> <constant> <output>" });
+            put("clear", new String[] { "clear", "<input>" });
+            put("clip", new String[] { "clip",
+                    "<input> <left> <right> <output> (time)\nclip <input> <left> <right> <attenuation> <output> (freq)" });
+            put("cmultiply", new String[] { "oneInputOneValueOneOutputCi", "<input> <constant> <output>" });
+            put("conjugate", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("copy", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("cosine", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("divide", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("epow", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("inv", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("ln", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("log", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("maximum", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("minimum", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("multiply", new String[] { "multiply", "<input1> <input2> <constant> <output>" });
+            put("rotate", new String[] { "oneInputOneValueOneOutputCi", "<input> <rotate> <output>" });
+            put("shift", new String[] { "oneInputOneValueOneOutputCi", "<input> <shift> <output>" });
+            put("sine", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("subtract", new String[] { "twoInputsOneOutputCi", "<input1> <input2> <output>" });
+            put("tenpow", new String[] { "oneInputOneOutputCi", "<input> <output>" });
+            put("zeropad", new String[] { "oneInputOneOutputCi", "<input> <output>" });
         }
     };
 
